FEAT: getFriendListInChallenge 메서드 생성